[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/projectiles/projectile.gd" type="Script" id=1]
[ext_resource path="res://assets/projectile/projectile.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 1 )

[node name="Projectile" type="Area2D"]
collision_layer = 8
collision_mask = 25
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.05 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 1, 0.1 )

[connection signal="area_entered" from="." to="." method="_on_Projectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
